# informatik-eksamen

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  popup.rs  workout.rs
