[package]
name = "informatik-eksamen"
version = "0.1.0"
edition = "2021"
authors = [ "sandalbanditten <sandalbanditten@tutanota.com>"
          , "LAHVIG <ludvigschouhansen@gmail.com>"
          , "mthsbttgr <mathiasbottger@gmail.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21"
eframe = "0.21"
env_logger = "0.10"
serde = "1"
serde_json = "1"
